--- a/Style.css
+++ b/Style.css
@@ -152,7 +152,7 @@ h1
 {
 	.search
 	{
-		margin: 0px;
+		padding-left: 2%;
 	}
 }
 
@@ -168,12 +168,9 @@ h1
 {
 	.searchbar
 	{
-		display: flex;
+		align-content: center;
 		justify-content: center;
-		margin-left: 0;
-		width: 100%;
-		margin-right: 0;
-		padding-right: 0;
+		width: 90%;
 
 	}
 }
@@ -350,6 +347,7 @@ button > p:hover
 	{
 		display: flex;
 		flex-direction: column;
+		margin-left: 2%;
 	}
 
 	.filters > h4
@@ -484,7 +482,7 @@ button > p:hover
 {
 	#logoinformation
 	{
-		margin-left: 0px;
+		margin-left: 2%;
 		padding-left: 0px;
 
 	}
@@ -567,7 +565,6 @@ h3
 
 .housing
 {
-	width: 70%;
 	margin-right: 3%;
 	margin-left: 0.8%;
 	padding-left: 2%;
@@ -591,7 +588,7 @@ h3
 	}
 }
 
-@media screen and (min-width: 1024px)
+@media screen and (min-width: 1025px)
 {
 	.housing
 	{
@@ -1384,6 +1381,10 @@ figure:hover
 	}
 }
 
+.price
+{
+	font-weight: bold;
+}
 
 footer
 {
