--- a/Style.css
+++ b/Style.css
@@ -84,7 +84,7 @@ label
 	height:50px;
 	width:50px;
 	vertical-align: middle;
-   	border-bottom-left-radius: 20px;
+    border-bottom-left-radius: 20px;
 	border-top-left-radius: 20px;
 	background-color: #f2f2f2;
 }
@@ -322,7 +322,7 @@ h3
 	margin-right: 2%;;
 	padding-bottom: 30px;
 	border: 5px solid;
-	border-color: white;
+	border-color: #FFFAFA;
 	background-color: white;
 	border-top-right-radius: 25px;
 	border-top-left-radius: 25px;
@@ -430,7 +430,7 @@ h3
 	height: 150px;
 	width: 94%;
 	border: 5px solid;
-	border-color: #FFFFFF;
+	border-color: #FFFAFA;
 	background-color: white;
 	border-top-right-radius: 25px;
 	border-top-left-radius: 25px;
